--- a/public/buinsess_box.html
+++ b/public/buinsess_box.html
@@ -57,52 +57,81 @@
         <div class="container d-flex justify-content-left align-items-center h-100">
             <div class="row text-white">
                 <div class="col-lg-12">
-                    <h1><span class="small-heading">Welcome to</span><br> G33K Entrepreneurs Hub</h1>
-                    <p>Explosive Startup Support</p>
-                    <button type="button" class="btn btn-teal">Get started</button>
+                    <h1><span class="small-heading">Business in a box</h1>
+                    <p>Key Documents Library</p>
                 </div>
             </div>
         </div>
     </header>
-    <section class="hub-boxes section-padding">
+    <section class="business-box section-padding">
         <div class="container">
-                <div class="d-flex headline">
-                        <div class="heading-block"></div>
-                        <h2>Headline here goes</h2>
-                </div>
-        <div class="row"><div class="col-lg-6">
-            <div class="box-gray">
-                <div class="d-flex justify-content-between"><div class="description"><h3>Business in a box</h3>
-                <p>Key Documents Library</p></div><div><i class="fas fa-briefcase fa-3x"></i></div></div>
+            <div class="d-flex headline">
+                <div class="heading-block"></div>
+                <h2>Strategic documents</h2>
             </div>
-        </div>
-        <div class="col-lg-6">
-                <div class="box-gray">
-                    <div class="d-flex justify-content-between"><div class="description"><h3>Help and Advice</h3>
-                    <p>Ask the experts</p></div><div><i class="fas fa-hands-helping fa-3x"></i></div></div>
+            <div class="row">
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
                 </div>
-            </div></div>
-  
-            <div class="row"><div class="col-lg-6">
-                    <div class="box-gray">
-                        <div class="d-flex justify-content-between"><div class="description"><h3>Discounts</h3>
-                        <p>Key Documents Library</p></div><div><i class="fas fa-sort-amount-down fa-3x"></i></div></div>
-                    </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
                 </div>
-                <div class="col-lg-6">
-                        <div class="box-gray">
-                            <div class="d-flex justify-content-between"><div class="description"><h3>Partnerships</h3>
-                            <p>Ask the experts</p></div><div><i class="fab fa-connectdevelop fa-3x"></i></div></div>
-                        </div>
-                    </div></div>
-             
-                    <div class="row"><div class="col-lg-12">
-                            <div class="box-gray">
-                                <div class="d-flex justify-content-between"><div class="description"><h3>B2B Toolset</h3>
-                                <p>Key Documents Library</p></div><div><i class="fas fa-toolbox fa-3x"></i></div></div>
-                            </div>
-                        </div>
-                     </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+            </div>
+
+            <div class="d-flex headline">
+                <div class="heading-block"></div>
+                <h2>Finance & Forecasting Documents</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+                <div class="col-lg-3"><img src="dist/images/image-doc.jpg" alt="">
+                    <p><strong>Document title</strong></p>
+                </div>
+            </div>
         </div>
     </section>
     <footer id="footer">
