--- a/public/company.html
+++ b/public/company.html
@@ -19,38 +19,40 @@
 <body>
     <header class="page-header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg" id="main-menu">
-                <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help&Advice</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Discounts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Partnership</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Access to capital</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pitch day</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Jargon buster</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                <div class="nav-wrapper">
+                        <nav class="navbar navbar-expand-lg" id="main-menu">
+                           <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
+                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                               <span class="navbar-toggler-icon"></span>
+                           </button>
+                           <div class="collapse navbar-collapse" id="navbarNav">
+                               <ul class="navbar-nav ml-auto">
+                                   <li class="nav-item active">
+                                       <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Help&Advice</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Discounts</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Partnership</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Access to capital</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Pitch day</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Jargon buster</a>
+                                   </li>
+                               </ul>
+                           </div>
+                       </nav>
+                   </div>
         </div>
         <div class="container d-flex justify-content-left align-items-center h-100">
             <div class="row text-white">
@@ -61,56 +63,63 @@
             </div>
         </div>
     </header>
-    <section class="content sec-pad">
+    <section class="company-content section-padding">
         <div class="container">
 <div class="row align-items-center intro">
-    <div class="col-lg-4 d-flex justify-content-center"><img src="dist/images/logo3.png" alt=""></div>
+    <div class="col-lg-4 d-flex justify-content-center"><img src="dist/images/logo5.png" alt=""></div>
     <div class="col-lg-8"><h3><strong>Acme Co</strong></h3>
     pLorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</div>
 </div>
 
-<div class="row">
+<div class="row row-eq-height">
     <div class="col-lg-6"><div class="box-gray">
         <h4><strong>Person to contact</strong></h4>
-        <div class="d-flex profile"><img src="dist/images/avatar-1.png" class="rounded-circle" alt=""><div class="profile-name"><p><strong>Emilia Clarke</strong></p><p>House Targaryen</p></div></div>
+        <div class="d-flex profile"><img src="dist/images/avatar-1.png" class="rounded-circle" alt=""><div class="profile-name"><p><strong>Emma Obrien</strong></p><p>House Targaryen</p></div></div>
+        <div class="d-flex contacts"><i class="fas fa-envelope orange-color"></i><p>0 123 456 789</p></div>
+        <div class="d-flex"><i class="fas fa-phone orange-color"></i><p>emma.obrien@email.com</p></div>
+        <div class="d-flex"><i class="fab fa-linkedin orange-color"></i><p>linkedin/emmaobrien</p></div>
     </div></div>
-    <div class="col-lg-6"></div>
+    <div class="col-lg-6"><div class="box-gray">
+            <h4><strong>Vendor details</strong></h4>
+            <div class="d-flex contacts"><i class="fas fa-envelope orange-color"></i><p>0 123 456 789</p></div>
+            <div class="d-flex contacts"><i class="fas fa-phone orange-color"></i><p>emma.obrien@email.com</p></div>
+            <div class="d-flex contacts"><i class="fab fa-linkedin orange-color"></i><p>linkedin/emmaobrien</p></div>
+            <div class="d-flex contacts"><i class="fas fa-globe orange-color"></i><p>www.mywebsite.com</p></div>
+            <div class="d-flex contacts"><i class="fas fa-map-marker-alt orange-color"></i><p>London, United Kingdom</p></div>
+
+        </div></div>
 </div>
         </div>
     </section>
     <footer id="footer">
-        <div class="container">
+            <div class="container">
             <div class="main-footer">
-                <div class="row">
-                    <div class="col-lg-3"><img src="dist/images/logo.png" alt="">
-                        <p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered
-                            number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United
-                            Kingdom, TN15 8DD</p>
+                <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
+            <div class="col-lg-3"><p>Business in a box</p>
+            <p>Help and advice</p>
+            <p>Discounts</p></div>
+            <div class="col-lg-3"><p>Partnership</p>
+            <p>B2B Toolset</p>
+            <p>Jargon Buster</p></div>
+            <div class="col-lg-3"><p>Terms & Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p></div></div></div>
+        </div>
+        <div class="container-fluid sub-footer">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <div><p>© 2018 G33K Entrepreneurs Hub</p></div>
+                    <div class="social-media"><i class="fab fa-facebook-f fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-pinterest-p fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x"></i>
                     </div>
-                    <div class="col-lg-3">
-                        <p>Business in a box</p>
-                        <p>Help and advice</p>
-                        <p>Discounts</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Partnership</p>
-                        <p>B2B Toolset</p>
-                        <p>Jargon Buster</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Terms & Conditions</p>
-                        <p>Privacy Policy</p>
-                        <p>Cookie Policy</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sub-footer">
-                <div class="row">
-                    <div class="col-lg-12"></div>
                 </div>
             </div>
         </div>
-    </footer>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -119,6 +128,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="dist/js/script.js"></script>
 </body>
 
 </html>
