--- a/public/discounts.html
+++ b/public/discounts.html
@@ -18,50 +18,53 @@
 
 <body>
     <header class="page-header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg" id="main-menu">
-                <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help&Advice</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Discounts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Partnership</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Access to capital</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pitch day</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Jargon buster</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <div class="container d-flex justify-content-left align-items-center h-100">
+            <div class="container">
+                    <div class="nav-wrapper">
+                            <nav class="navbar navbar-expand-lg" id="main-menu">
+                               <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
+                               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                   <span class="navbar-toggler-icon"></span>
+                               </button>
+                               <div class="collapse navbar-collapse" id="navbarNav">
+                                   <ul class="navbar-nav ml-auto">
+                                       <li class="nav-item active">
+                                           <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Help&Advice</a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Discounts</a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Partnership</a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Access to capital</a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Pitch day</a>
+                                       </li>
+                                       <li class="nav-item">
+                                           <a class="nav-link" href="#">Jargon buster</a>
+                                       </li>
+                                   </ul>
+                               </div>
+                           </nav>
+                       </div>
+     
+      
             <div class="row text-white">
                 <div class="col-lg-12">
                     <h1><span class="small-heading">Discounts</h1>
-                    <p>Ask the experts</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <button type="button" class="btn btn-teal">Register your account</button>
                 </div>
             </div>
         </div>
     </header>
-    <section class="discounts-intro sec-pad">
+    <section class="discounts-intro section-padding">
         <div class="container">
             <div class="d-flex">
                 <div class="heading-block"></div>
@@ -84,7 +87,7 @@
                 <div class="col-lg-3">
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-img-top" src="dist/images/acme-logo.png" alt="Card image cap">
+                            <img class="align-middle" src="dist/images/acme-logo.png" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -98,7 +101,7 @@
                 <div class="col-lg-3">
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-img-top" src="dist/images/logo2.png" alt="Card image cap">
+                            <img class="align-middle" src="dist/images/logo2.png" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -112,7 +115,7 @@
                 <div class="col-lg-3">
                     <div class="card">
                         <div class="card-image">
-                            <img class="card-img-top" src="dist/images/logo3.png" alt="Card image cap">
+                            <img class="align-middle" src="dist/images/logo3.png" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -199,38 +202,34 @@
         </div>
     </section>
     <footer id="footer">
-        <div class="container">
+            <div class="container">
             <div class="main-footer">
-                <div class="row">
-                    <div class="col-lg-3"><img src="dist/images/logo.png" alt="">
-                        <p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered
-                            number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United
-                            Kingdom, TN15 8DD</p>
+                <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
+            <div class="col-lg-3"><p>Business in a box</p>
+            <p>Help and advice</p>
+            <p>Discounts</p></div>
+            <div class="col-lg-3"><p>Partnership</p>
+            <p>B2B Toolset</p>
+            <p>Jargon Buster</p></div>
+            <div class="col-lg-3"><p>Terms & Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p></div></div></div>
+        </div>
+        <div class="container-fluid sub-footer">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <div><p>© 2018 G33K Entrepreneurs Hub</p></div>
+                    <div class="social-media"><i class="fab fa-facebook-f fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-pinterest-p fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x"></i>
                     </div>
-                    <div class="col-lg-3">
-                        <p>Business in a box</p>
-                        <p>Help and advice</p>
-                        <p>Discounts</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Partnership</p>
-                        <p>B2B Toolset</p>
-                        <p>Jargon Buster</p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Terms & Conditions</p>
-                        <p>Privacy Policy</p>
-                        <p>Cookie Policy</p>
-                    </div>
-                </div>
-            </div>
-            <div class="sub-footer">
-                <div class="row">
-                    <div class="col-lg-12"></div>
                 </div>
             </div>
         </div>
-    </footer>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -239,6 +238,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="dist/js/script.js"></script>
 </body>
 
 </html>
