--- a/public/help_expert_people.html
+++ b/public/help_expert_people.html
@@ -19,38 +19,40 @@
 <body>
     <header class="page-header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg" id="main-menu">
-                <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help&Advice</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Discounts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Partnership</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Access to capital</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pitch day</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Jargon buster</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                <div class="nav-wrapper">
+                        <nav class="navbar navbar-expand-lg" id="main-menu">
+                           <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
+                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                               <span class="navbar-toggler-icon"></span>
+                           </button>
+                           <div class="collapse navbar-collapse" id="navbarNav">
+                               <ul class="navbar-nav ml-auto">
+                                   <li class="nav-item active">
+                                       <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Help&Advice</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Discounts</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Partnership</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Access to capital</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Pitch day</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Jargon buster</a>
+                                   </li>
+                               </ul>
+                           </div>
+                       </nav>
+                   </div>
         </div>
         <div class="container d-flex justify-content-left align-items-center h-100">
             <div class="row text-white">
@@ -61,7 +63,7 @@
             </div>
         </div>
     </header>
-    <section class="experts-people sec-pad darker-gray">
+    <section class="experts-people section-padding darker-gray">
         <div class="container">
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
@@ -73,7 +75,7 @@
         </div>
         </div>
     </section>
-    <section class="experts-form sec-pad">
+    <section class="experts-form section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -100,11 +102,11 @@
             </div>
         </div>
     </section>
-    <section class="experts-faq sec-pad pt-0">
+    <section class="experts-faq section-padding pt-0">
         <div class="container">
-                <div class="d-flex mb-sh">
+                <div class="d-flex headline">
                         <div class="heading-block"></div>
-                        <h2 class="mb-sh">Emmas freaquently asked questions</h2>
+                        <h2>Emmas freaquently asked questions</h2>
                 </div>
                 <div class="accordion" id="accordionExample">
                         <div class="card">
@@ -151,24 +153,66 @@
                           </div>
                         </div>
                       </div>
-        </div>
+                  </div>
     </section>
-   <footer id="footer">
-    <div class="container">
-    <div class="main-footer">
-        <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
-    <div class="col-lg-3"><p>Business in a box</p>
-    <p>Help and advice</p>
-    <p>Discounts</p></div>
-    <div class="col-lg-3"><p>Partnership</p>
-    <p>B2B Toolset</p>
-    <p>Jargon Buster</p></div>
-    <div class="col-lg-3"><p>Terms & Conditions</p>
-    <p>Privacy Policy</p>
-    <p>Cookie Policy</p></div></div></div>
-    <div class="sub-footer"><div class="row"><div class="col-lg-12"></div></div></div>
-</div>
-</footer>
+    <section class="other-experts">
+        <div class="container">
+                <div class="d-flex headline">
+                        <div class="heading-block"></div>
+                        <h2>Ask our other experts</h2>
+                </div>
+
+                <div class="row"><div class="col-lg-3"><div class="boxes">
+                        <img src="dist/images/avatar-3.png" alt="" class="rounded-circle">
+                        <h4><strong>Daniel Brühl</strong></h4>
+                        <p>IT Specialist</p></div>
+                </div>
+                <div class="col-lg-3"><div class="boxes">
+                        <img src="dist/images/avatar-1.png" alt="" class="rounded-circle">
+                        <h4><strong>Theresa Tucker</strong></h4>
+                        <p>IT Specialist</p></div>
+                </div>
+                <div class="col-lg-3"><div class="boxes">
+                        <img src="dist/images/avatar-2.png" alt="" class="rounded-circle">
+                        <h4><strong>Hayden Christensen</strong></h4>
+                        <p>IT Specialist</p></div>
+                </div>
+                <div class="col-lg-3"><div class="boxes">
+                        <img src="dist/images/avatar-5.png" alt="" class="rounded-circle">
+                        <h4><strong>Alyna O'Brein</strong></h4>
+                        <p>IT Specialist</p></div>
+                </div>
+        </div>   
+    </section>
+    <footer id="footer">
+            <div class="container">
+            <div class="main-footer">
+                <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
+            <div class="col-lg-3"><p>Business in a box</p>
+            <p>Help and advice</p>
+            <p>Discounts</p></div>
+            <div class="col-lg-3"><p>Partnership</p>
+            <p>B2B Toolset</p>
+            <p>Jargon Buster</p></div>
+            <div class="col-lg-3"><p>Terms & Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p></div></div></div>
+        </div>
+        <div class="container-fluid sub-footer">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <div><p>© 2018 G33K Entrepreneurs Hub</p></div>
+                    <div class="social-media"><i class="fab fa-facebook-f fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-pinterest-p fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -177,6 +221,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="dist/js/script.js"></script>
 </body>
 
 </html>
