--- a/public/help_experts.html
+++ b/public/help_experts.html
@@ -19,38 +19,40 @@
 <body>
     <header class="page-header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg" id="main-menu">
-                <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Help&Advice</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Discounts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Partnership</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Access to capital</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pitch day</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Jargon buster</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                <div class="nav-wrapper">
+                        <nav class="navbar navbar-expand-lg" id="main-menu">
+                           <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
+                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                               <span class="navbar-toggler-icon"></span>
+                           </button>
+                           <div class="collapse navbar-collapse" id="navbarNav">
+                               <ul class="navbar-nav ml-auto">
+                                   <li class="nav-item active">
+                                       <a class="nav-link" href="#">Business in a box<span class="sr-only">(current)</span></a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Help&Advice</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Discounts</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Partnership</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Access to capital</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Pitch day</a>
+                                   </li>
+                                   <li class="nav-item">
+                                       <a class="nav-link" href="#">Jargon buster</a>
+                                   </li>
+                               </ul>
+                           </div>
+                       </nav>
+                   </div>
         </div>
         <div class="container d-flex justify-content-left align-items-center h-100">
             <div class="row text-white">
@@ -61,11 +63,11 @@
             </div>
         </div>
     </header>
-    <section class="experts sec-pad">
+    <section class="experts section-padding">
      <div class="container">
-        <div class="d-flex mb-sh">
+        <div class="d-flex headline">
             <div class="heading-block"></div>
-            <h2 class="mb-sh">Ask the experts</h2>
+            <h2>Ask the experts</h2>
     </div>
     <div class="row">
         <div class="col-lg-3"><div class="card">
@@ -115,33 +117,47 @@
     </div>
      </div>   
     </section>
-    <section class="slack-join sec-pad gray-color">
+    <section class="slack-join section-padding">
         <div class="container">
-            <div class="row justify-content-center align-items-center"><div class="col-lg-6"><div class="d-flex">
+            <div class="row justify-content-center align-items-center"><div class="col-lg-6">
+                    <div class="d-flex headline">
                     <div class="heading-block"></div>
-                    <h2 class="mb-sh">Join the discussion</h2></div>
+                    <h2>Join the discussion</h2></div>
                     <p>Chat with other experts in the G33K slack community. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque</p>
-            <button type="button" class="btn btn-teal">Acess Slack Now </button>
+            <button type="button" class="btn btn-teal">Acess Slack Now  <i class="fab fa-slack fa-2x"></i></button>
                 </div>
             <div class="col-lg-6"><img class="w-100" src="dist/images/slack-image.png" alt=""></div></div>
         </div>
     </section>
-   <footer id="footer">
-    <div class="container">
-    <div class="main-footer">
-        <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
-    <div class="col-lg-3"><p>Business in a box</p>
-    <p>Help and advice</p>
-    <p>Discounts</p></div>
-    <div class="col-lg-3"><p>Partnership</p>
-    <p>B2B Toolset</p>
-    <p>Jargon Buster</p></div>
-    <div class="col-lg-3"><p>Terms & Conditions</p>
-    <p>Privacy Policy</p>
-    <p>Cookie Policy</p></div></div></div>
-    <div class="sub-footer"><div class="row"><div class="col-lg-12"></div></div></div>
-</div>
-</footer>
+    <footer id="footer">
+            <div class="container">
+            <div class="main-footer">
+                <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
+            <div class="col-lg-3"><p>Business in a box</p>
+            <p>Help and advice</p>
+            <p>Discounts</p></div>
+            <div class="col-lg-3"><p>Partnership</p>
+            <p>B2B Toolset</p>
+            <p>Jargon Buster</p></div>
+            <div class="col-lg-3"><p>Terms & Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p></div></div></div>
+        </div>
+        <div class="container-fluid sub-footer">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <div><p>© 2018 G33K Entrepreneurs Hub</p></div>
+                    <div class="social-media"><i class="fab fa-facebook-f fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-pinterest-p fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -150,6 +166,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="dist/js/script.js"></script>
 </body>
 
 </html>
