--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <header class="main-header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg" id="main-menu">
+        <div class="nav-wrapper">
+             <nav class="navbar navbar-expand-lg" id="main-menu">
                 <a class="navbar-brand" href="#"><img src="dist/images/logo.png" alt="" id="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,21 +52,23 @@
                 </div>
             </nav>
         </div>
-        <div class="container d-flex justify-content-center align-items-center h-100">
+            <div class="container d-flex justify-content-center align-items-center h-100">
+            
             <div class="row text-center text-white">
                 <div class="col-lg-12">
-                    <h1><span class="$color-teal">G33K</span> Entrepreneurs Hub</h1>
+                    <h1><span class="color-teal">G33K</span> Entrepreneurs Hub</h1>
                     <p>Explosive Startup Support</p>
                     <button type="button" class="btn btn-teal">Get started</button>
                 </div>
             </div>
-        </div>
+       
+    </div>
     </header>
-    <section class="intro sec-pad gray-color">
+    <section class="intro section-padding">
         <div class="container">
-            <div class="d-flex">
+            <div class="d-flex headline">
                 <div class="heading-block"></div>
-                <h2 class="mb-sh">WHAT IS G33K ENTREPRENEURS HUB?</h2>
+                <h2>WHAT IS G33K ENTREPRENEURS HUB?</h2>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec,
                 mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed
@@ -78,11 +80,11 @@
                 blandit sed diam.</p>
         </div>
     </section>
-    <section class="join sec-pad">
+    <section class="join section-padding">
         <div class="container">
-            <div class="d-flex">
+            <div class="d-flex heading">
                 <div class="heading-block"></div>
-                <h2 class="mb-sh">WHAT YOU GET BY JOINING G33K HUB</h2>
+                <h2>WHAT YOU GET BY JOINING G33K HUB</h2>
             </div>
          <p>You get full access to the SoPro B2B Toolset for free business development support, and also every
                 business in our community will happily offer a 10% discount to all businesses in the community.</p>
@@ -142,11 +144,11 @@
         </div>
         </div>
     </section>
-    <section class="testimonials sec-pad gray-color">
+    <section class="testimonials section-padding gray-color">
         <div class="container">
-                <div class="d-flex">
+                <div class="d-flex headline">
                         <div class="heading-block"></div>
-                        <h2 class="mb-sh">WHAT OUR TRUSTED CLIENTS SAY ABOUT US</h2>
+                        <h2>WHAT OUR TRUSTED CLIENTS SAY ABOUT US</h2>
                 </div>
         <div class="boxes">
         <div class="row"><div class="col-lg-6"><div class="box-tst"><p><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. "</em></p>
@@ -163,22 +165,35 @@
                     </div></div></div>
     </div></div>
     </section>
-<footer id="footer">
-    <div class="container">
-    <div class="main-footer">
-        <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
-    <div class="col-lg-3"><p>Business in a box</p>
-    <p>Help and advice</p>
-    <p>Discounts</p></div>
-    <div class="col-lg-3"><p>Partnership</p>
-    <p>B2B Toolset</p>
-    <p>Jargon Buster</p></div>
-    <div class="col-lg-3"><p>Terms & Conditions</p>
-    <p>Privacy Policy</p>
-    <p>Cookie Policy</p></div></div></div>
-    <div class="sub-footer"><div class="row"><div class="col-lg-12"></div></div></div>
-</div>
-</footer>
+    <footer id="footer">
+            <div class="container">
+            <div class="main-footer">
+                <div class="row"><div class="col-lg-3"><img src="dist/images/logo.png" alt=""><p class="company-info">2018 G33K Holdings Ltd.is a private limited company with registered number 10358168 at 33 Wrotham Road Wrotham Road, Borough Green, Sevenoaks, Kent, United Kingdom, TN15 8DD</p></div>
+            <div class="col-lg-3"><p>Business in a box</p>
+            <p>Help and advice</p>
+            <p>Discounts</p></div>
+            <div class="col-lg-3"><p>Partnership</p>
+            <p>B2B Toolset</p>
+            <p>Jargon Buster</p></div>
+            <div class="col-lg-3"><p>Terms & Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p></div></div></div>
+        </div>
+        <div class="container-fluid sub-footer">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <div><p>© 2018 G33K Entrepreneurs Hub</p></div>
+                    <div class="social-media"><i class="fab fa-facebook-f fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-pinterest-p fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -187,6 +202,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="dist/js/script.js"></script>
 </body>
 
 </html>
